Unit test ParseUtil